add dummy components

--- a/public/typo3conf/ext/news/Resources/Private/Templates/Article/Index.html
+++ b/public/typo3conf/ext/news/Resources/Private/Templates/Article/Index.html
@@ -1,12 +1,14 @@
 {namespace v=FluidTYPO3\Vhs\ViewHelpers}
+{namespace ng=BStrauss\Engine\ViewHelpers}
 <section id="c{uid}">
   <h2>{category}</h2>
   <ul>
     <f:for each="{items}" as="item">
-      <li>
-        <h3>{item.title}</h3>
-        <p>{item.text}</p>
-      </li>
+      <ng:render path="fileadmin/Resources/Public/Components/Article/Article.html">
+        <ng:slot name="header">{item.title}</ng:slot>
+        <ng:slot name="main">{item.text}</ng:slot>
+        <ng:slot name="footer">Copyright 2017</ng:slot>
+      </ng:render>
     </f:for>
   </ul>
 </section>
