--- a/public/fileadmin/Resources/Private/Templates/Default.html
+++ b/public/fileadmin/Resources/Private/Templates/Default.html
@@ -1,4 +1,10 @@
 {namespace v=FluidTYPO3\Vhs\ViewHelpers}
+<header>
+  Header
+</header>
 <main>
   <f:format.raw>{contentMain}</f:format.raw>
 </main>
+<footer>
+  Footer
+</footer>
