--- a/public/fileadmin/Resources/Public/Scss/app.scss
+++ b/public/fileadmin/Resources/Public/Scss/app.scss
@@ -1,3 +1,8 @@
+@import "compass";
+
+@import "core/fonts";
+@import "core/globals";
+
 @import "../JavaScripts/node_modules/fx-layout/styles/classes";
 
 @import "../Components/Article/Article";
