--- a/public/fileadmin/Resources/Public/Scss/app.scss
+++ b/public/fileadmin/Resources/Public/Scss/app.scss
@@ -5,4 +5,4 @@
 
 @import "../JavaScripts/node_modules/fx-layout/styles/classes";
 
-@import "../Components/Article/Article";
+@import "components";
