remove raw formatter

--- a/public/typo3conf/ext/news/Resources/Private/Templates/Article/Index.html
+++ b/public/typo3conf/ext/news/Resources/Private/Templates/Article/Index.html
@@ -8,7 +8,9 @@
       <ng:render path="fileadmin/Resources/Public/Components/Article/Article.html">
         <ng:slot name="header">{item.title}</ng:slot>
         <ng:slot name="main">{item.text}</ng:slot>
-        <ng:slot name="footer"><span>Copyright 2017</span></ng:slot>
+        <ng:slot name="footer">
+          <span>Copyright 2017</span>
+        </ng:slot>
       </ng:render>
 
     </f:for>
