--- a/public/fileadmin/Resources/Public/Components/Article/Article.html
+++ b/public/fileadmin/Resources/Public/Components/Article/Article.html
@@ -2,6 +2,6 @@
   <header>{slot-header}</header>
   <main>{slot-main}</main>
   <footer>
-    <f:format.raw>{slot-footer}</f:format.raw>
+    <f:format.html>{slot-footer}</f:format.html>
   </footer>
 </article>
